# ReasoningSkills

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: code_hybrid.yaml  deepmath_bm25.yaml
scripts/: run_deepmath_demo.sh
src/trs/: cli.py  clients.py  code_judge.py  config.py  eval_math.py  generation.py  indexing.py  inference.py  prompts.py  schemas.py  skill_extraction.py
src/trs/datasets/: deepmath.py  generic.py
src/trs/retrieval/: bm25.py  dense.py  hybrid.py
src/trs/utils/: io.py  text.py
src/trs_repro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_prompts.py
